<resources>
    <string name="app_name">WareHouseManager</string>
    <string name="welcome_to">Welcome to</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="warehouse_management_4_0">Warehouse Management 4.0</string>
    <string name="warehouse_title">WareHouse Manager</string>
    <string name="warehouse_description">Transform your warehouse into a smart system with advanced AI technology.
    </string>
    <string name="get_started">Get Started</string>
    <string name="facebook_login">Sign in with Facebook</string>
    <string name="google_login">Sign in with Google</string>
    <string name="or">or</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_up_with_email">Create an account with Email</string>
    <string name="confirmation_terms_and_conditions">By signing in you accept \n our Terms of Use and Provacy Policy
    </string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="email_address">"Email "</string>
    <string name="continue_">Continue</string>
    <string name="signup_details_info_title">Detail Infomation\n</string>
    <string name="persional_details">Persional Information\n</string>
    <string name="personal_details">Personal infomations</string>
    <string name="full_name">Full name</string>
    <string name="map">Address</string>
    <string name="phone">Phone Number</string>
    <string name="login_info">Login infomations</string>
    <string name="warehoue_link">Warehouse name</string>
    <string name="password">Password</string>
    <string name="search">Search...</string>
    <string name="contact_support">Support: 0366212422</string>
    <string name="forgot_password">
        <u>Forgot your password?</u>
    </string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_an_account">
        <u>Don\'t have an account?</u>
    </string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_your_password">Forgot password?</string>
    <string name="enter_your_warehouse_link_and_email">Enter your warehouse name and email</string>
    <string name="set_again_your_password">Set again your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="set_password">Set password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analysis">Analysis</string>
    <string name="invoice">Invoice</string>
    <string name="products">Products</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="set_avatar">Set avavtar</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="sort">Sort</string>
    <string name="add_product">Add product</string>
    <string name="empty_products">You dont have product</string>
    <string name="save">Save</string>
    <string name="save_add_new">Save and add new</string>
    <string name="code_product">Code product</string>
    <string name="name_product">Name product</string>
    <string name="description_product">Description product</string>
</resources>