<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.activities.signup.SignupDetailsInfoActivity">

        <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/signup_details_info_title"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/personal_details"
                  android:textSize="20sp"
                  android:layout_marginTop="20dp"
                  android:layout_marginStart="16dp"
                  android:textStyle="bold"
                  android:id="@+id/personal_details_tv"
                  app:layout_constraintTop_toBottomOf="@id/toolbar"
                  app:layout_constraintStart_toStartOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/personal_details_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/full_name_til"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
                android:hint="@string/full_name"
                app:startIconDrawable="@drawable/ic_person"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxEms="11"
                    android:maxLines="1"
                    android:id="@+id/full_name_et"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/full_name_til"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/map_til"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_arrow_forward"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
                android:hint="@string/map"
                app:startIconDrawable="@drawable/ic_map"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:maxEms="11"
                    android:focusable="false"
                    android:clickable="false"
                    android:maxLines="1"
                    android:id="@+id/map_et"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/map_til"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/phone_til"
                app:endIconMode="clear_text"
                app:prefixText="+84"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
                android:hint="@string/phone"
                app:startIconDrawable="@drawable/ic_phone"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone|number"
                    android:maxEms="11"
                    android:maxLength="9"
                    android:maxLines="1"
                    android:id="@+id/phone_et"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/login_info"
                  android:textSize="20sp"
                  android:layout_marginTop="20dp"
                  android:layout_marginStart="16dp"
                  android:textStyle="bold"
                  android:id="@+id/login_info_tv"
                  app:layout_constraintTop_toBottomOf="@id/phone_til"
                  app:layout_constraintStart_toStartOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/login_info_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/link_warehouse_til"
                app:endIconMode="clear_text"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
                android:hint="@string/warehoue_link"
                app:suffixText="nqm.com"
                app:suffixTextAppearance="@color/orange"
                app:suffixTextColor="@color/orange"
                app:startIconDrawable="@drawable/ic_warehouse"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxEms="11"
                    android:maxLines="1"
                    android:id="@+id/link_warehouse_et"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/link_warehouse_til"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/email_til"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
                android:hint="@string/email_address"
                app:startIconDrawable="@drawable/ic_email"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxEms="11"
                    android:maxLines="1"
                    android:id="@+id/email_et"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/email_til"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/password_til"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_lock"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxEms="11"
                    android:maxLines="1"
                    android:id="@+id/password_et"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/continue_"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:enabled="false"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_button"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/continue_btn"
                app:layout_constraintTop_toBottomOf="@id/password_til"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>